Added category rest method to return category by community id
